objects/EDX_Registration_Status_Res__c.object
<CustomObject>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>clcommon__Collateral__c</referenceTo>
        <relationshipLabel>EDX Registration Status Res</relationshipLabel>
        <relationshipName>EDX_Registration_Status_Res</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>errors__c</fullName>
        <label>errors</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationErrorStatusCode__c</fullName>
        <label>integrationErrorStatusCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationErrorStatus__c</fullName>
        <label>integrationErrorStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>meta__c</fullName>
        <label>meta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requestBody__c</fullName>
        <label>requestBody</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>responseBody__c</fullName>
        <label>responseBody</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EDX Registration Status Res</label>
    <nameField>
        <displayFormat>RSR-{00000}</displayFormat>
        <label>EDX Registration Status Res Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDX Registration Status Res</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>